--- a/index.html
+++ b/index.html
@@ -106,5 +106,28 @@ textarea {
   
   
  </form>
+
+// Code to integrate rasa chatbot in the website
+<script>!(function () {
+  let e = document.createElement("script"),
+    t = document.head || document.getElementsByTagName("head")[0];
+  (e.src =
+    "https://cdn.jsdelivr.net/npm/rasa-webchat@1.x.x/lib/index.js"),
+    // Replace 1.x.x with the version that you want
+    (e.async = !0),
+    (e.onload = () => {
+      window.WebChat.default(
+        {
+         initPayload: '/greet',
+          customData: { language: "en" },
+          socketUrl: "https://gaurav77722.github.io/CollegeManagementSystem/",
+          // add other props here
+        },
+        null
+      );
+    }),
+    t.insertBefore(e, t.firstChild);
+})();
+</script>
 </body>
 </html>
