--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ textarea {
   let e = document.createElement("script"),
     t = document.head || document.getElementsByTagName("head")[0];
   (e.src =
-    "https://cdn.jsdelivr.net/npm/rasa-webchat@1.x.x/lib/index.js"),
+    "https://cdn.jsdelivr.net/npm/rasa-webchat@1.0.0/lib/index.js"),
     // Replace 1.x.x with the version that you want
     (e.async = !0),
     (e.onload = () => {
@@ -120,7 +120,7 @@ textarea {
         {
          initPayload: '/greet',
           customData: { language: "en" },
-          socketUrl: "https://gaurav77722.github.io/CollegeManagementSystem/",
+          socketUrl: "https://d54a-2401-4900-1d6d-1716-3c73-836b-e882-559a.in.ngrok.io",
           // add other props here
         },
         null
@@ -129,5 +129,6 @@ textarea {
     t.insertBefore(e, t.firstChild);
 })();
 </script>
+
 </body>
 </html>
